[tool.poetry]
name = "beergame-gemini"
version = "0.1.0"
description = "Beer Game Multiplayer Simulation"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.1"
flask-socketio = "^5.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"